--- a/Myntra_Clone/pages/bag.html
+++ b/Myntra_Clone/pages/bag.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/bag.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Myntra Clone</title>
 </head>
 <body>
   <header>
     <div class="myntra-logo">
-       <img src="images/myntra_logo.webp" alt="Mynta-logo" width="53px" height="36px">
+       <img src="../images/myntra_logo.webp" alt="Mynta-logo" width="53px" height="36px">
     </div>
     <nav class="all-links">
       <a class="link-style" href="#" target="_blank">MEN</a>
@@ -62,8 +63,12 @@
   </div>
   </header>
   <main>
-     <div class="items_container">
-     </div>
+    <div class="bag-page">
+      <div class="bag-items-container">
+      </div>
+      <div class="bag-price-summary">
+      </div>
+    </div>
   </main>
   <footer>
     <div class="onlineshopping">
@@ -105,7 +110,7 @@
       © 2024 www.myntra.com. All rights reserved.
     </div>
   </footer>
-  <script src="scripts/index.js">
-  </script>
+  <script src="../scripts/index.js"></script>
+  <script src="../scripts/bag.js"></script>
 </body>
 </html>
